--- a/api/api.csproj
+++ b/api/api.csproj
@@ -19,7 +19,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="9.0.1" />
+    <PackageReference Include="QRCoder" Version="1.6.0" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.0.12" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.1" />
   </ItemGroup>
 
 </Project>
